--- a/mysite/templates/errors/404.html
+++ b/mysite/templates/errors/404.html
@@ -3,8 +3,8 @@
 {% block title %}Error 404{% endblock title %}
 
 {% block body %}
-<body style="background-color : #0B3C49; color : #f3f7fb;"> 
-    <h1>Level {{error}} Not Found !</h1>
+<body style="background-color : #0B3C49; color : #f3f7fb;">
+    <!-- Ajouter un lien vers le formualaire -->
     <a href="{% url 'home'%}"><h2>Return to Home page</h2></a>
 </body>
 {% endblock body %}
