--- a/game/templates/game/form_user.html
+++ b/game/templates/game/form_user.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
-{% block title %}Formulaire Utilisateur{% endblock %}
+{% block title %}Connexion{% endblock %}
 
 {% block body %}
 <div class="simple-body">
