--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -35,6 +35,13 @@ body {
   font-size: 2rem;
 }
 
+.classic-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 15vh;
+}
 
 /**************************** button ****************************/
 
@@ -328,4 +335,43 @@ body {
 }
 .onoffswitch-checkbox:checked + .onoffswitch-label:before {
     right: 0px;
+}
+
+/****************************   boss    ****************************/
+.boss {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 92vh;
+  width : 100vw;
+}
+
+.illustrations {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 65vh;
+}
+
+.illustrations img {
+  width : 75vw;
+}
+
+.question-responses {
+  height: 15vh;
+  padding: 3vh;
+  font-size: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.question-responses p {
+  width: 100%;
+}
+
+.question-responses div {
+  width: 50%;
 }
