--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -15,6 +15,12 @@ body {
   margin : 0px;
 }
 
+.error {
+  color : red;
+  font-size: 2rem;
+  margin-bottom: 0px;
+}
+
 
 /**************************** home page + formulaire ****************************/
 
@@ -28,11 +34,6 @@ body {
   align-items: center;
   color: white;
   text-align: center;
-}
-
-.connexion-error {
-  color : red;
-  font-size: 2rem;
 }
 
 .classic-flex {
@@ -361,7 +362,7 @@ body {
 
 .question-responses {
   height: 15vh;
-  padding: 3vh;
+  padding: 1vh;
   font-size: 2rem;
   display: flex;
   flex-wrap: wrap;
