correction grosses erreurs

--- a/game/templates/game/level.html
+++ b/game/templates/game/level.html
@@ -88,9 +88,9 @@
       <div class="help-content">
         <h3 class="title">Règles du jeu</h3>
         <p class="text"> Je suis caché dans un des tableaux du musée. Pour me trouver, tu devras passer tous les niveaux. Trouve
-        sur chaque tableau les cinq morceaux se trouavnt en bas de l'écran et clique dessus. Si tu es au musée, active le mode visite. Après
-        cinq niveaux, tu plongeras dans un nouveau monde correspondant à un mouvement artistique d'une des salles musée. Tu devras changer de salle si tu t'y trouves. </p>
-        <p class="text">Si tu est bloqué, clique sur <i class="fas fa-lightbulb"></i> pour avoir des indices. Chaque indices te couteras 3 étoiles. Tu pourras en obtenir en gagnant un niveau (moins tu auras fait de clics, plus tu auras d'étoiles).</p>
+        sur chaque tableau les cinq morceaux se trouvant en bas de l'écran et clique dessus. Si tu es au musée (ou si tu veux corser le jeu), active le mode visite. Après
+        cinq niveaux, tu plongeras dans un nouveau monde correspondant à un mouvement artistique d'une des salles du musée. Tu devras changer de salle, si tu t'y trouves. </p>
+        <p class="text">Si tu est bloqué, clique sur <i class="fas fa-lightbulb"></i> pour avoir des indices. Chaque indice te coûtera 3 étoiles. Tu pourras en obtenir en gagnant un niveau (moins tu auras fait de clics, plus tu auras d'étoiles).</p>
 
         <img src="{% static 'images/demo1.png' %}">
         <p class="text"> <i class="fas fa-exclamation-triangle" ></i> Attention, au bout d'un certain nombre de clics, tu seras
