--- a/mysite/templates/pages/home.html
+++ b/mysite/templates/pages/home.html
@@ -8,7 +8,10 @@
       <h1 >Bacchanight 2020</h1>
       <img src="{% static 'images/header/header_image.png' %}">
       <h3>Trouve moi !</h3>
+
+        <p>Pour une meilleure expérience, utilise un écran en mode portrait<p>
     </div>
+
   </a>
 
 
